compiler/testData/diagnostics/tests/thisAndSuper/ambigousLabelOnThis.kt
class Dup {
  fun Dup() : Unit {
    this<!AMBIGUOUS_LABEL!>@Dup<!>
  }
}